[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://menu/options_audio.gd" type="Script" id=2]
[ext_resource path="res://fonts/default_1.tres" type="DynamicFont" id=3]
[ext_resource path="res://menu/options/combo_slider.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/shortcut_cancel.tres" type="ShortCut" id=5]

[node name="OptionsAudio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = -120.0
margin_right = 97.0
margin_bottom = -79.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "Audio Settings"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -54.0
margin_right = 168.0
margin_bottom = 54.0
custom_constants/separation = 8
alignment = 1

[node name="SoundVolume" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 14.0
margin_right = 680.0
margin_bottom = 50.0

[node name="Label" parent="VBoxContainer/SoundVolume" index="0"]
margin_right = 464.0
text = "Sound Volume"

[node name="SpinBox" parent="VBoxContainer/SoundVolume" index="1"]
margin_left = 488.0
margin_right = 568.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSlider" parent="VBoxContainer/SoundVolume" index="2"]
margin_left = 592.0
margin_right = 680.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="MusicVolume" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 58.0
margin_right = 680.0
margin_bottom = 94.0

[node name="Label" parent="VBoxContainer/MusicVolume" index="0"]
margin_right = 464.0
text = "Music Volume"

[node name="SpinBox" parent="VBoxContainer/MusicVolume" index="1"]
margin_left = 488.0
margin_right = 568.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="HSlider" parent="VBoxContainer/MusicVolume" index="2"]
margin_left = 592.0
margin_right = 680.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="Done" type="Button" parent="." groups=[
"makes_sound",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -57.0
margin_top = 83.0
margin_right = 57.0
margin_bottom = 117.0
grow_horizontal = 2
shortcut = ExtResource( 5 )
text = "Done"
[connection signal="value_changed" from="VBoxContainer/SoundVolume/HSlider" to="." method="_on_sound_volume_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume/HSlider" to="." method="_on_music_volume_value_changed"]
[connection signal="pressed" from="Done" to="." method="_on_done_pressed"]

[editable path="VBoxContainer/SoundVolume"]

[editable path="VBoxContainer/MusicVolume"]
